# Actuarial-Pricing-Engine

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-inference.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: cd.yml  ci.yml
api/: __init__.py  main.py  routes.py  schemas.py
app/: config.toml  streamlit_app.py
configs/: config.yaml
data/sample/: insurance_sample.csv  test_sample.csv  train_sample.csv
docker/: Dockerfile  docker-compose.yml  mlflow_basic_auth.ini.example
models/: bias_correction.json  drift_baseline.json  pipeline_metadata.json  test_indices.json
scripts/: benchmark.py  ci_model_gate.py  generate_checksums.py  monitor_gpu.py  profile_inference.py  setup_project.py  sweep_g4_params.py  train_model.py  verify_patches.py  verify_setup.py
src/: __init__.py
src/insurance_ml/: __init__.py  config.py  data.py  diagnostics.py  evaluate.py  features.py  models.py  monitoring.py  optuna_optimizer.py  predict.py  shared.py  train.py  utils.py
tests/: conftest.py  test_api.py  test_config.py  test_data.py  test_evaluate.py  test_features.py  test_models.py  test_monitoring.py  test_predict.py  test_regression.py
